--- a/C01/.gitignore
+++ b/C01/.gitignore
@@ -1,11 +1,11 @@
 .vscode
 *.o
 BraiiiiiiinnnzzzZ
-Moar brainz!
-HI THIS IS BRAIN
-Unnecessary violence
-Sed is for losers
-Harl 2.0
-Harl filter
+Moar_brainz!
+HI_THIS_IS_BRAIN
+Unnecessary_violence
+Sed_is_for_losers
+Harl_2.0
+Harl_filter
 .DS_Store
 *a.out
