gitignore vs changed ex01 -> memory adress held by stringPTR

--- a/C01/.gitignore
+++ b/C01/.gitignore
@@ -3,3 +3,10 @@
 minishell
 .DS_Store
 *a.out
+*.replace
+BraiiiiiiinnnzzzZ
+Moar_brainz
+HI_THIS_IS_BRAIN
+Sed_is_for_losers
+Harl_2.0
+Harl_filter
