--- a/C04/.gitignore
+++ b/C04/.gitignore
@@ -2,7 +2,7 @@
 *.o
 .DS_Store
 *a.out
-Aaaaand_OPEN!
-Serena_my_love!
-Repetitive_work
-Now_its_weird!
+Polymorphism
+I_dont_want_to_set_the_world_on_fire
+Abstract_class
+Interface_&_recap
