very first step of setting CPP04, ex02

--- a/C04/ex02/Makefile
+++ b/C04/ex02/Makefile
@@ -6,16 +6,17 @@
 #    By: thi-phng <thi-phng@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/18 18:18:06 by thi-phng          #+#    #+#              #
-#    Updated: 2022/07/07 11:39:16 by thi-phng         ###   ########.fr        #
+#    Updated: 2022/07/08 11:32:56 by thi-phng         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	Repetitive_work
+NAME	=	Abstract_class
 CC		=	c++
 CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
-SRC		=	ClapTrap.cpp \
-			ScavTrap.cpp \
+SRC		=	Animal.cpp \
+			Dog.cpp \
+			Cat.cpp \
 			main.cpp
 
 OBJDIR	=	objs
