--- a/C04/ex01/Makefile
+++ b/C04/ex01/Makefile
@@ -6,18 +6,20 @@
 #    By: thi-phng <thi-phng@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/18 18:18:06 by thi-phng          #+#    #+#              #
-#    Updated: 2022/07/08 11:30:29 by thi-phng         ###   ########.fr        #
+#    Updated: 2022/07/11 14:50:49 by thi-phng         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	I_dont_want_to_set_the_world_on_fire
+NAME	=	Polymorphism
 CC		=	c++
 CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 SRC		=	Animal.cpp \
 			Dog.cpp \
 			Cat.cpp \
-			main.cpp
+			main.cpp \
+			WrongCat.cpp \
+			WrongAnimal.cpp
 
 OBJDIR	=	objs
 OBJ		=	$(addprefix $(OBJDIR)/, $(SRC:.cpp=.o))
