--- a/C05/.gitignore
+++ b/C05/.gitignore
@@ -2,7 +2,7 @@
 *.o
 .DS_Store
 *a.out
-Polymorphism
-I_dont_want_to_set_the_world_on_fire
-Abstract_class
-Interface_&_recap
+ex00_Bureaucrat
+ex01_Form_up_maggots!
+ex02_28B_not_28C
+ex03_Intern_At_least_this_beats_coffee_making
