done with debug in makefile

--- a/C05/ex01/Makefile
+++ b/C05/ex01/Makefile
@@ -6,13 +6,18 @@
 #    By: thi-phng <thi-phng@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/18 18:18:06 by thi-phng          #+#    #+#              #
-#    Updated: 2022/07/16 10:57:49 by thi-phng         ###   ########.fr        #
+#    Updated: 2022/07/16 18:20:09 by thi-phng         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	=	ex01_Form_up_maggots!
 CC		=	c++
 CFLAGS	=	-Wall -Wextra -Werror -std=c++98
+
+ifeq ($(DEBUG), 1)
+	CFLAGS		+= -DDEBUG
+endif
+
 RM		=	rm -rf
 SRC		=	Bureaucrat.cpp \
 			Form.cpp \
@@ -80,4 +85,7 @@ fclean:			clean
 
 re:				fclean all
 
-.PHONY:			all clean fclean re launch
+debug		:	fclean
+				$(MAKE) DEBUG=1
+
+.PHONY:			all clean fclean re launch debug
