added files in makefile

--- a/C05/ex02/Makefile
+++ b/C05/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: thi-phng <thi-phng@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/18 18:18:06 by thi-phng          #+#    #+#              #
-#    Updated: 2022/07/16 18:58:34 by thi-phng         ###   ########.fr        #
+#    Updated: 2022/07/16 19:38:08 by thi-phng         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,6 +21,9 @@ endif
 RM		=	rm -rf
 SRC		=	Bureaucrat.cpp \
 			Form.cpp \
+			PresidentialPardonForm.cpp \
+			RobotomyRequestForm.cpp \
+			ShrubberyCreationForm.cpp \
 			main.cpp 
 
 OBJDIR	=	objs
