--- a/C06/ex02/Makefile
+++ b/C06/ex02/Makefile
@@ -6,11 +6,11 @@
 #    By: thi-phng <thi-phng@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/18 18:18:06 by thi-phng          #+#    #+#              #
-#    Updated: 2022/07/21 21:43:16 by thi-phng         ###   ########.fr        #
+#    Updated: 2022/07/20 15:54:50 by thi-phng         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	Serialization
+NAME	=	convert
 CC		=	c++
 CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
