added main and debug ifndef

--- a/C08/ex01/Makefile
+++ b/C08/ex01/Makefile
@@ -6,13 +6,19 @@
 #    By: thi-phng <thi-phng@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/18 18:18:06 by thi-phng          #+#    #+#              #
-#    Updated: 2022/07/27 11:18:37 by thi-phng         ###   ########.fr        #
+#    Updated: 2022/07/28 15:28:46 by thi-phng         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	=	Span
 CC		=	c++
 CFLAGS	=	-Wall -Wextra -Werror -std=c++98
+
+
+ifeq ($(DEBUG), 1)
+	CFLAGS		+= -DDEBUG
+endif
+
 RM		=	rm -rf
 SRC		=	main.cpp \
 			Span.cpp
@@ -77,6 +83,9 @@ clean:
 fclean:			clean
 	$(RM) $(NAME) ${RM} objs
 
+debug		:	fclean
+				$(MAKE) DEBUG=1
+
 re:				fclean all
 
-.PHONY:			all clean fclean re launch
+.PHONY:			all clean fclean re launch debug
